Fix #35113: solidify modifier not preserving clamp option on duplicating the object or modifier.